# building-test-project-tutorial

./: .gitignore  README.md  pyproject.toml  robot.toml
Data/ArgumentsFiles/Common/: DefaultArguments.robot  PythonPathArguments.robot
Data/Secrets/: LoadSecrets.resource
Resources/Common/: Environment.resource  EnvironmentVariables.json  Requests.resource  Selenium.resource
Resources/REST/: Authentication.resource  Messages.resource
Resources/UI/Admin/: Branding.resource  Login.resource  Messages.resource  Navbar.resource  Report.resource  Rooms.resource
Resources/UI/Customer/: AlertBoxPageObject.resource  Contact.resource  ContactPageObject.resource  ContactVerifications.resource
Resources/Utilities/: ValueUtilities.resource
Tests/: Example.robot  RESTTEsts.robot  RestfulBookerPlatform.resource  URLTest.robot  lskdfjglsdfg.json
Tests/REST/: ContactMessageTest.robot
Tests/UI/AdminTests/: AdminMenuPermissionsTest.robot  URLNavigationTest.robot
Tests/UI/CustomerTests/: ContactMessageErrorsTest.robot  ContactMessageTest.robot
