[project]
name = "building-test-project-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Kelby Stine",email = "kelbystine@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
